--- a/Develop/client/package.json
+++ b/Develop/client/package.json
@@ -13,6 +13,8 @@
     "@apollo/client": "^3.13.7",
     "bootstrap": "^5.2.3",
     "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6",
+    "mongoose":"8.13.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -28,5 +30,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^5.1.6"
+  },
+  "mutations": {
+    "SAVE_BOOK": "mutation SaveBook($bookData: BookInput!) { saveBook(bookData: $bookData) { _id } }"
   }
 }
