--- a/package.json
+++ b/package.json
@@ -1,4 +1,22 @@
 {
+  "name": "googlebooks-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server/server.js",
+  "scripts": {
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
+    "render-build":"npm install && npm run build"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^8.2.0"
+  },
+
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "body-parser": "^2.2.0",
@@ -7,9 +25,9 @@
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6"
   },
-  "devDependencies": {
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1"
-  }
+  
 }
+
