--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "googlebooks-app",
   "version": "1.0.0",
   "description": "",
-  "main": "server/server.ts",
+  "main": "server/server.js",
   "scripts": {
-    "start": "ts-node server/src/server.ts",
+    "start": "node server/src/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "build": "concurrently \"cd server && npm run build\" \"cd client && npm run build\"",
